Fix: actualizar nombre del proyecto

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "mi-proyecto",
+  "name": "API-MyResume",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
